--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 .bannerBgImage{
     height: 100vh;
-    background-image: url("/images/bannerImage.jpg");
+    background: url("/images/bannerImage.jpg");
     background-size: cover;
     position: relative;
 }.bannerText{
