--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 .bannerBgImage{
     height: 100vh;
-    bImage: url("/images/bannerImage.jpg");
+    BgImage: url("/images/bannerImage.jpg");
     background-size: cover;
     position: relative;
 }
